Fix cropped widgets on pages with long titles (fixes #607)

--- a/native/userchrome/profile/chrome/pwa/content/browser.css
+++ b/native/userchrome/profile/chrome/pwa/content/browser.css
@@ -86,6 +86,12 @@
     height: 100%;
   }
 
+  /* Overflow title before widgets */
+
+  #TabsToolbar-customization-target {
+    min-width: 0;
+  }
+
   /* Hide titlebar when the icon bar is hidden */
 
   #titlebar[autohide] {
@@ -174,12 +180,23 @@
     margin-bottom: auto;
     margin-left: 6px;
     height: 30px;
+    overflow: hidden;
   }
 
   .site-info > .tab-throbber,
   .site-info > .tab-icon-pending,
   .site-info > .tab-icon-image {
     margin-inline-end: 5.5px;
+  }
+
+  .site-info {
+    --tab-label-mask-size: 1em;
+  }
+
+  @media not (forced-colors) {
+    .site-info {
+      --tab-label-mask-size: 2em;
+    }
   }
 
   .tab-icon-image {
